--- a/.github/workflows/step_test.yaml
+++ b/.github/workflows/step_test.yaml
@@ -100,6 +100,8 @@ jobs:
     env:
       SPGLIB_SANITIZER: ${{ matrix.sanitizer }}
     steps:
+      # Temporary workaround for missing pip in container
+      - run: dnf install -y python3-pip python3-devel
       - uses: actions/checkout@v4
       - uses: lukka/get-cmake@latest
       - name: Run CMake configuration for ${{ matrix.toolchain }} toolchain
