Get git tags on RTD
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,8 @@ build:
   tools:
     python: "3"
   jobs:
+    post_checkout:
+      - git fetch --unshallow || true
     post_create_environment:
       - pip install --pre --upgrade sphinx-book-theme
 sphinx:
