Use gcovr for coverage
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,12 @@ dependencies = [
     "importlib-resources; python_version<'3.10'",
 ]
 authors = [
-    {name="Atsushi Togo", email="atz.togo@gmail.com"},
+    { name = "Atsushi Togo", email = "atz.togo@gmail.com" },
 ]
 maintainers = [
-    {name="Atsushi Togo", email="atz.togo@gmail.com"},
-    {name="Cristian Le", email="git@lecris.dev"},
-    {name="Kohei Shinohara", email="kshinohara0508@gmail.com"},
+    { name = "Atsushi Togo", email = "atz.togo@gmail.com" },
+    { name = "Cristian Le", email = "git@lecris.dev" },
+    { name = "Kohei Shinohara", email = "kshinohara0508@gmail.com" },
 ]
 classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
@@ -131,13 +131,13 @@ source = ['spglib']
 [tool.ruff]
 line-length = 88
 extend-select = [
-    "F",           # pyflakes
+    "F", # pyflakes
     # "W",           # pycodestyle-warnings
-    "E",           # pycodestyle-errors
+    "E", # pycodestyle-errors
     # "C90",         # mccabe
-    "I",           # isort
+    "I", # isort
     # "N",           # pep8-naming
-    "D",           # pydocstyle
+    "D", # pydocstyle
     # "UP",          # pyupgrade
     # "YTT",         # flake8-2020
     # "ANN",         # flake8-annotations
@@ -184,9 +184,9 @@ extend-ignore = [
     "D101",
     "D102",
     "D103",
-    "D203",  # Confilct with D211
+    "D203", # Confilct with D211
     "D205",
-    "D213",  # Conflict with D212
+    "D213", # Conflict with D212
 ]
 exclude = [
     "database",
@@ -209,3 +209,10 @@ skip = "doc/references.bib"
 
 [tool.check-wheel-contents]
 ignore = "W002"
+
+[tool.gcovr]
+cobertura = "coverage.xml"
+exclude = [
+    "src/msg_database.c",
+    "src/spg_database.c",
+]
