Fix scikit-build configuration
Use `cmake.define` instead of `cmake.args`. The latter cannot be overriden via CLI

Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/.github/workflows/step_coverage.yaml
+++ b/.github/workflows/step_coverage.yaml
@@ -57,6 +57,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install .[test-cov] \
              --config-settings=cmake.define.CMAKE_C_COMPILER=gcc \
+             --config-settings=cmake.define.SPGLIB_WITH_TESTS=ON \
              --config-settings=cmake.define.SPGLIB_TEST_COVERAGE=ON \
              --config-settings=build-dir=build
       - name: Test pytest with coverage
