--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,13 +82,13 @@ testing = [
 [tool.scikit-build]
 wheel.packages = ["python/spglib"]
 wheel.install-dir = "spglib"
-cmake.args = [
-    "-DSPGLIB_WITH_Python=ON",
-    "-DSPGLIB_WITH_TESTS=OFF",
-    "-DSPGLIB_USE_OMP=OFF",
-]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
 sdist.include = ["python/spglib/_version.py"]
+
+[tool.scikit-build.cmake.define]
+SPGLIB_WITH_Python = "ON"
+SPGLIB_WITH_TESTS = "OFF"
+SPGLIB_USE_OMP = "OFF"
 
 [tool.setuptools_scm]
 write_to = "python/spglib/_version.py"
