--- a/test/functional/python/CMakeLists.txt
+++ b/test/functional/python/CMakeLists.txt
@@ -5,3 +5,6 @@ add_test(NAME pytests
 		COMMAND ${Python_EXECUTABLE} -m pytest
 		WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/..
 )
+set_property(TEST pytests APPEND PROPERTY
+		ENVIRONMENT PYTHONPATH=${Spglib_Python_BINARY_DIR}
+)
