--- a/.github/workflows/step_build-wheel.yaml
+++ b/.github/workflows/step_build-wheel.yaml
@@ -7,11 +7,6 @@ on:
   # Make it able to be used in other workflows
   workflow_call:
     inputs:
-      upload:
-        required: false
-        type: boolean
-        default: true
-        description: Upload wheel as artifact
       cibw_archs_linux:
         required: false
         type: string
@@ -53,10 +48,10 @@ jobs:
           CIBW_BUILD: ${{ inputs.cibw_build }}
           CIBW_ARCHS_LINUX: ${{ inputs.cibw_archs_linux }}
           CIBW_ARCHS_MACOS: ${{ inputs.cibw_archs_macos }}
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
-        if: ${{ inputs.upload }}
 
   build_sdist:
     name: 🐍 sdist
@@ -65,12 +60,4 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.x
-      - name: Build sdist
-        run: pipx run build
-      - uses: actions/upload-artifact@v3
-        with:
-          path: dist/*.tar.gz
-        if: ${{ inputs.upload }}
+      - uses: hynek/build-and-inspect-python-package@v2
