Simplify Fortran package test
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/test/package/pkg-config/CMakeLists.txt
+++ b/test/package/pkg-config/CMakeLists.txt
@@ -25,4 +25,8 @@ if (SPGLIB_WITH_Fortran)
 	add_test(NAME smoke_test_Fortran
 			COMMAND $<TARGET_FILE:main_Fortran>
 	)
+	set_tests_properties(smoke_test_Fortran PROPERTIES
+			PASS_REGULAR_EXPRESSION
+			"^[ \n]*Spglib version: ${spglib_VERSION}[ \n]*Spglib_Fortran version: ${spglib_fortran_VERSION}[ \n]*$"
+	)
 endif ()
