--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ test-suite.log
 docs_build/
 CMakeUserPresets.json
 
-doc/api/python-api/
+docs/api/python-api/
 
 /python/spglib/_version.py
 venv
