--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,14 +46,9 @@ if (SPGLIB_DEBUG)
             debug.c
     )
 endif ()
-set_target_properties(Spglib_symspg PROPERTIES
-        PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/spglib.h)
-configure_file(spglib.h spglib.h COPYONLY)
-target_include_directories(Spglib_symspg
-        PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
-        PUBLIC
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
-        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
+target_include_directories(Spglib_symspg PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}
+        ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 # Link to third-party libraries
