--- a/cmake/SpglibConfig.cmake.in
+++ b/cmake/SpglibConfig.cmake.in
@@ -19,9 +19,26 @@ if (NOT EXISTS ${CMAKE_CURRENT_LIST_DIR}/PackageCompsHelper.cmake)
 	message(WARNING "Missing helper file PackageCompsHelper.cmake")
 	set(Spglib_FOUND FALSE)
 	return()
-endif()
+endif ()
 
 include(${CMAKE_CURRENT_LIST_DIR}/PackageCompsHelper.cmake)
 find_package_with_comps(PACKAGE Spglib PRINT LOAD_ALL_DEFAULT HAVE_GLOBAL_SHARED_STATIC)
 
 check_required_components(Spglib)
+
+# For Fortran targets, check that the modules are usable with the current compiler
+if (CMAKE_Fortran_COMPILER AND TARGET Spglib::fortran_mod)
+	# TODO: CMake 3.25 use the modern try_compile signature. Remove the explicit CMakeScratch
+	try_compile(spglib_fortran_try_compile ${CMAKE_BINARY_DIR}/CMakeFiles/CMakeScratch/spglib_fortran
+			SOURCES ${CMAKE_CURRENT_LIST_DIR}/try_compile.f90
+			LINK_LIBRARIES Spglib::fortran_mod
+	)
+	if (spglib_fortran_try_compile)
+		# If the compilation was successful, use the module version of the library
+		add_library(Spglib::fortran ALIAS Spglib::fortran_mod)
+	else ()
+		# Otherwise, assume it was because of incompatible compiler
+		# Add the bundled `.f90` files as sources instead
+		add_library(Spglib::fortran ALIAS Spglib::fortran_include)
+	endif ()
+endif ()
