--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,8 @@ jobs:
     name: 👀 coverage
     needs: [ tests ]
     uses: ./.github/workflows/step_coverage.yaml
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   build-wheel:
     name: build-wheel
