Fix windows installation path
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/fortran/CMakeLists.txt
+++ b/fortran/CMakeLists.txt
@@ -45,9 +45,12 @@ if (SPGLIB_INSTALL)
 			"$<INSTALL_INTERFACE:${CMAKE_INSTALL_MODULEDIR}>")
 	install(TARGETS Spglib_fortran
 			EXPORT SpglibTargets-fortran
-			LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Runtime NAMELINK_COMPONENT Spglib_Development
+			LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Runtime
+			NAMELINK_COMPONENT Spglib_Development
 			ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Spglib_Development
-			PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Spglib_Development)
+			PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Spglib_Development
+			RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Spglib_Runtime
+	)
 	export_components(COMPONENT fortran LIB_TYPE ${SPGLIB_LIB_TYPE})
 
 	# Maybe it is handled automatically
