--- a/example/c_api/CMakeLists.txt
+++ b/example/c_api/CMakeLists.txt
@@ -3,7 +3,7 @@ project(example_spglib LANGUAGES C)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_EXTENSIONS ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
 find_package(Spglib REQUIRED)
 
