Add type annotation for cell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ license-files = { paths = ["COPYING"] }
 readme = "python/README.rst"
 dynamic = ["version"]
 dependencies = [
-    "numpy",
+    "numpy>=1.20",
+    "typing_extensions",
 ]
 authors = [
     {name="Atsushi Togo", email="atz.togo@gmail.com"},
