--- a/test/example/c_api/CMakeLists.txt
+++ b/test/example/c_api/CMakeLists.txt
@@ -12,3 +12,16 @@ add_executable(example_full example_full.c)
 
 target_link_libraries(example PRIVATE Spglib::symspg)
 target_link_libraries(example_full PRIVATE Spglib::symspg)
+
+# Windows is weird like that :/
+# https://stackoverflow.com/a/73550650
+if (CMAKE_IMPORT_LIBRARY_SUFFIX)
+	add_custom_command(TARGET example POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:example> $<TARGET_FILE_DIR:example>
+			COMMAND_EXPAND_LISTS
+	)
+	add_custom_command(TARGET example_full POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:example_full> $<TARGET_FILE_DIR:example_full>
+			COMMAND_EXPAND_LISTS
+	)
+endif ()
