--- a/test/package/FetchContent/CMakeLists.txt
+++ b/test/package/FetchContent/CMakeLists.txt
@@ -32,6 +32,8 @@ add_test(NAME smoke_test_c
 )
 set_tests_properties(smoke_test_c PROPERTIES
 		PASS_REGULAR_EXPRESSION "^Spglib version: ${Spglib_VERSION}\n*$"
+		# https://stackoverflow.com/a/77990416
+		ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_c>,\;>"
 )
 
 if (SPGLIB_WITH_Fortran)
@@ -44,5 +46,7 @@ if (SPGLIB_WITH_Fortran)
 	set_tests_properties(smoke_test_Fortran PROPERTIES
 			PASS_REGULAR_EXPRESSION
 			"^[ \n]*Spglib version: ${Spglib_VERSION}[ \n]*Spglib_Fortran version: ${Spglib_VERSION}[ \n]*$"
+			# https://stackoverflow.com/a/77990416
+			ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_Fortran>,\;>"
 	)
 endif ()
