--- a/test/functional/python/CMakeLists.txt
+++ b/test/functional/python/CMakeLists.txt
@@ -7,4 +7,5 @@ add_test(NAME pytests
 )
 set_property(TEST pytests APPEND PROPERTY
 		ENVIRONMENT PYTHONPATH=${Spglib_Python_BINARY_DIR}
+		            PATH=${CMAKE_INSTALL_PREFIX}/lib:$ENV{PATH}
 )
