--- a/test/example/CMakeLists.txt
+++ b/test/example/CMakeLists.txt
@@ -21,13 +21,15 @@ endforeach ()
 if (SPGLIB_WITH_Python)
 	add_test (NAME example-python
 			COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/python_api/example.py
+			WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin
 	)
 	add_test (NAME example-python-full
 			COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/python_api/example_full.py
+			WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin
 	)
 	set_property(TEST example-python example-python-full
 			APPEND PROPERTY
+			WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/bin
 			ENVIRONMENT PYTHONPATH=${Spglib_Python_BINARY_DIR}
-			            PATH=${CMAKE_INSTALL_PREFIX}/lib:$ENV{PATH}
 	)
 endif ()
