--- a/test/package/FetchContent/CMakeLists.txt
+++ b/test/package/FetchContent/CMakeLists.txt
@@ -32,9 +32,13 @@ add_test(NAME smoke_test_c
 )
 set_tests_properties(smoke_test_c PROPERTIES
 		PASS_REGULAR_EXPRESSION "^Spglib version: ${Spglib_VERSION}\n*$"
-		# https://stackoverflow.com/a/77990416
-		ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_c>,\;>"
 )
+if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.27)
+	# https://stackoverflow.com/a/77990416
+	set_property(TEST smoke_test_c APPEND PROPERTY
+			ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_c>,\;>"
+	)
+endif ()
 
 if (SPGLIB_WITH_Fortran)
 	enable_language(Fortran)
@@ -46,7 +50,11 @@ if (SPGLIB_WITH_Fortran)
 	set_tests_properties(smoke_test_Fortran PROPERTIES
 			PASS_REGULAR_EXPRESSION
 			"^[ \n]*Spglib version: ${Spglib_VERSION}[ \n]*Spglib_Fortran version: ${Spglib_VERSION}[ \n]*$"
-			# https://stackoverflow.com/a/77990416
-			ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_Fortran>,\;>"
 	)
+	if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.27)
+		# https://stackoverflow.com/a/77990416
+		set_property(TEST smoke_test_Fortran APPEND PROPERTY
+				ENVIRONMENT_MODIFICATION "PATH=path_list_prepend:$<JOIN:$<TARGET_RUNTIME_DLL_DIRS:main_Fortran>,\;>"
+		)
+	endif ()
 endif ()
