Fix CMake 3.29 issue
Signed-off-by: Cristian Le <cristian.le@mpsd.mpg.de>

--- a/test/functional/fortran/CMakeLists.txt
+++ b/test/functional/fortran/CMakeLists.txt
@@ -49,6 +49,7 @@ create_test_sourcelist(FortranTests_Files
         test_fortran_version.F90
 )
 
+# CMake < 3.29 includes the driver source in the source list
 list(REMOVE_ITEM FortranTests_Files fortran_test.c)
 target_sources(Spglib_Fortran_tests PRIVATE
         ${CMAKE_CURRENT_BINARY_DIR}/fortran_test.c
@@ -65,6 +66,10 @@ target_compile_definitions(Spglib_Fortran_tests PRIVATE
 
 # Loop over all main tests files
 foreach (test IN LISTS FortranTests_Files)
+    if (test MATCHES ".*fortran_test.*")
+        # Skip the test driver
+        continue()
+    endif ()
     cmake_path(REMOVE_EXTENSION test OUTPUT_VARIABLE test_name)
     # Check if we have subtests defined
     if (DEFINED SubTests_${test_name})
