--- a/.github/workflows/step_coverage.yaml
+++ b/.github/workflows/step_coverage.yaml
@@ -35,7 +35,9 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           name: ${{ matrix.coverage }} coverage
-          files: coverage.xml
+          disable_search: true
+          plugin: noop
+          files: coverage-gcovr.xml
           flags: ${{ matrix.coverage }}
           verbose: true
 
@@ -57,7 +59,7 @@ jobs:
              --config-settings=cmake.define.SPGLIB_TEST_COVERAGE=ON \
              --config-settings=build-dir=cmake-build-coverage
       - name: Test pytest with coverage
-        run: pytest --cov=spglib
+        run: pytest --cov --cov-report=xml:coverage-pytest.xml
       - name: Get coverage data
         # TODO: Switch to tagged release
         uses: threeal/gcovr-action@xml-out
@@ -66,6 +68,8 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           name: python_api coverage
-          files: coverage.xml,.coverage
+          disable_search: true
+          plugin: noop
+          files: coverage-gcovr.xml,coverage-pytest.xml
           flags: python_api
           verbose: true
