Revert "[Debug] try without codecov flags path"
This reverts commit deb92d45550b8c41e6dffa7ef28b6385919c4f94.

--- a/.github/.codecov.yaml
+++ b/.github/.codecov.yaml
@@ -1,3 +1,16 @@
+flags:
+  c_api:
+    paths:
+      - src/*
+  fortran_api:
+    paths:
+      - src/*
+      - fortran/*
+  python_api:
+    paths:
+      - src/*
+      - python/*
+
 coverage:
   status:
     project:
